# py-core

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml
docs/: api.md
secma_core/db/: init_db.py  main.py  selectors.py
secma_core/db/alembic/: env.py
secma_core/db/models/: api.py  application.py  base.py  mixins.py  permission.py  role.py  tenant.py  user.py
secma_core/schemas/: application.py  errors.py  tenant.py  user.py
secma_core/server/: api.py  app.md  app.py  constants.py  default-config.yaml  exceptions.py  main.py  messages.py  messages_tests.py  settings.py  settings_tests.py  utils.py  utils_tests.py
secma_core/server/dependencies/: app.py  auth.py  context.py  role.py  tenant.py  user.py
secma_core/server/management/: __init__.py  api.py  application.py  auth.py  stats.py  version.py
secma_core/server/permissions/: __init__.py  api.py  permission.py  role.py  role_perm.py
secma_core/server/tenants/: __init__.py  api.py  tenant.py
secma_core/server/users/: __init__.py  api.py  roles.py  user.py
tests/: factories.py
tests/api/: conftest.py
tests/api/management/: test_create_app.py  test_delete_app.py  test_edit_app.py  test_get_app.py  test_get_apps.py  test_stats.py  test_version.py
